--- a/WindowsService/App.config
+++ b/WindowsService/App.config
@@ -1,21 +1,22 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
   </configSections>
   <appSettings>
     <add key="urls" value="localhost"/>
-    <add key="interval" value="1000"/>
+    <add key="interval" value="120000"/> <!--2 min-->
+    <add key="serviceName" value="Keep ISS Alive"/>
   </appSettings>
   <log4net>
     <root>
-      <level value="ALL" />
-      <appender-ref ref="MyAppender" />
-      <appender-ref ref="RollingFileAppender" />
+      <level value="ALL"/>
+      <appender-ref ref="MyAppender"/>
+      <appender-ref ref="RollingFileAppender"/>
     </root>
     <appender name="MyAppender" type="log4net.Appender.ConsoleAppender">
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date %level %logger - %message%newline" />
+        <conversionPattern value="%date %level %logger - %message%newline"/>
       </layout>
     </appender>
     <!--<appender name="MyFileAppender" type="log4net.Appender.FileAppender">
@@ -27,18 +28,18 @@
       </layout>
     </appender>-->
     <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="rolling.log" />
-      <appendToFile value="true" />
-      <rollingStyle value="Size" />
-      <maxSizeRollBackups value="5" />
-      <maximumFileSize value="10MB" />
-      <staticLogFileName value="true" />
+      <file value="rolling.log"/>
+      <appendToFile value="true"/>
+      <rollingStyle value="Size"/>
+      <maxSizeRollBackups value="5"/>
+      <maximumFileSize value="10MB"/>
+      <staticLogFileName value="true"/>
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %level %logger - %message%newline" />
+        <conversionPattern value="%date [%thread] %level %logger - %message%newline"/>
       </layout>
     </appender>
   </log4net>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
   </startup>
 </configuration>
