--- a/WindowsService/App.config
+++ b/WindowsService/App.config
@@ -4,9 +4,8 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
   </configSections>
   <appSettings>
-    <add key="urls" value="localhost"/>
+    <add key="urls" value="dev.zuri9.wf"/>
     <add key="interval" value="120000"/> <!--2 min-->
-    <add key="serviceName" value="Keep ISS Alive"/>
   </appSettings>
   <log4net>
     <root>
